added some endpoint to affidaLotto, edited openAPI
